RESOLVED FIXED76286
Eval in strict mode does not need dynamic checks
https://bugs.webkit.org/show_bug.cgi?id=76286
Summary Eval in strict mode does not need dynamic checks
Andy Wingo
Reported 2012-01-13 10:39:02 PST
The patch to be attached says: * runtime/JSActivation.cpp (JSC::JSActivation::JSActivation): Eval in strict mode cannot introduce variables, so it not impose the need for dynamic checks.
Attachments
Patch (1.74 KB, patch)
2012-01-13 10:40 PST, Andy Wingo
no flags
Andy Wingo
Comment 1 2012-01-13 10:40:11 PST
Geoffrey Garen
Comment 2 2012-01-13 11:01:16 PST
This looks right to me. Oliver, what do you think?
Oliver Hunt
Comment 3 2012-01-13 11:36:42 PST
Comment on attachment 122451 [details] Patch Oh, i never thought about doing it that way. Hilariously simple. r=me.
WebKit Review Bot
Comment 4 2012-01-13 12:31:57 PST
Comment on attachment 122451 [details] Patch Clearing flags on attachment: 122451 Committed r104970: <http://trac.webkit.org/changeset/104970>
WebKit Review Bot
Comment 5 2012-01-13 12:32:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.