Eval in strict mode does not need dynamic checks https://bugs.webkit.org/show_bug.cgi?id=76286

Patch by Andy Wingo <wingo@igalia.com> on 2012-01-13
Reviewed by Oliver Hunt.

* runtime/JSActivation.cpp (JSC::JSActivation::JSActivation):
Eval in strict mode cannot introduce variables, so it not impose
the need for dynamic checks.

Canonical link: https://commits.webkit.org/93114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104970 268f45cc-cd09-0410-ab3c-d52691b4dbfc